[gd_scene load_steps=3 format=2]

[ext_resource path="res://PrimaryAssessment.gd" type="Script" id=1]
[ext_resource path="res://Blue_Control.tres" type="Theme" id=2]

[node name="Control" type="Control"]
margin_right = 1.0
margin_bottom = 600.0
theme = ExtResource( 2 )
script = ExtResource( 1 )

[node name="Panel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 1023.0

[node name="ScrollContainer" type="ScrollContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 1023.0

[node name="HBoxContainer" type="HBoxContainer" parent="ScrollContainer"]
margin_right = 724.0
margin_bottom = 400.0
alignment = 1

[node name="VSpacer" type="VBoxContainer" parent="ScrollContainer/HBoxContainer"]
margin_right = 320.0
margin_bottom = 400.0
rect_min_size = Vector2( 320, 0 )

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollContainer/HBoxContainer"]
margin_left = 324.0
margin_right = 724.0
margin_bottom = 400.0
rect_min_size = Vector2( 400, 400 )
custom_constants/separation = 5
alignment = 1

[node name="VBoxContainer2" type="VBoxContainer" parent="."]
margin_left = 50.0
margin_top = 50.0
margin_right = 250.0
margin_bottom = 450.0
rect_min_size = Vector2( 200, 0 )

[node name="Button" type="Button" parent="VBoxContainer2"]
margin_right = 200.0
margin_bottom = 18.0
text = "Grade Test"

[node name="RichTextLabel" type="RichTextLabel" parent="VBoxContainer2"]
margin_top = 22.0
margin_right = 200.0
margin_bottom = 52.0
rect_min_size = Vector2( 0, 30 )

[node name="Button2" type="Button" parent="VBoxContainer2"]
margin_top = 56.0
margin_right = 200.0
margin_bottom = 74.0
text = "Return to Menu"

[node name="RichTextLabel2" type="RichTextLabel" parent="VBoxContainer2"]
margin_top = 78.0
margin_right = 200.0
margin_bottom = 108.0
rect_min_size = Vector2( 0, 30 )

[connection signal="pressed" from="VBoxContainer2/Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="VBoxContainer2/Button2" to="." method="_on_Button2_pressed"]
